Closed Bug 360106 Opened 18 years ago Closed 18 years ago

Mistakes in logic for nsHTMLTableAccessible::IsProbablyForLayout()

Categories

(Core :: Disability Access APIs, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: aaronlev, Assigned: aaronlev)

References

Details

(Keywords: access)

Attachments

(1 file)

- We should be checking for descendent <caption> elements, not a summary element.
- We should return an answer of false if there are lots of rows (probably not for layout)
Attachment #245099 - Flags: review?(pilgrim)
Blocks: keya11y
Attachment #245099 - Flags: review?(pilgrim) → review?(Evan.Yan)
Comment on attachment 245099 [details] [diff] [review]
Fix the 2 problems mentioned

r=me
Attachment #245099 - Flags: review?(Evan.Yan) → review+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: