Bug 360106. Errors in logic for nsHTMLTableAccessible::IsProbablyForLayout(). r=evan.yan